--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: lightblue;
-  color: darkblue;
+  background-color: #4B5D67;
+  color: lightblue;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -41,7 +41,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px;
-  color: darkblue;
+  color: lightblue;
   opacity: 0.7;
   user-select: none;
   font-weight: bold;
@@ -59,12 +59,11 @@ body {
   align-items: center;
   justify-content: center;
 
-  border: 2px solid darkblue;
+  border: 2px solid lightblue;
   border-radius: 50%;
 
   font-size: 24px;
-  color: darkblue;
-
+  color: lightblue;
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
@@ -74,7 +73,7 @@ body {
 
 .github-icon:hover {
   transform: scale(1.15);
-  background: darkblue;
+  background: lightblue;
   color: white;
 }
 
@@ -87,7 +86,7 @@ body {
   padding: 8px 12px;
   border: none;
   border-radius: 16px;
-  background-color: darkblue;
+  background-color: lightblue;
   color: white;
   cursor: pointer;
   font-size: 14px;
@@ -98,7 +97,7 @@ body {
   border-radius: 16px;
   border: none;
   padding: 10px 20px;
-  background-color: darkblue;
+  background-color: #4B5D67;
   font-size: 16px;
   cursor: pointer;
   margin: 10px;
@@ -106,7 +105,7 @@ body {
 }
 
 .btn:hover {
-  background-color: #00008b;
+  background-color: #2C3E50;
   opacity: 0.7;
 }
 .result {
@@ -116,7 +115,7 @@ body {
 #resultText {
   font-size: 18px;
   font-weight: 600;
-  color: darkblue;
+  color: lightblue;
   transition: 0.3s;
 }
 @media (max-width: 600px) {
@@ -188,4 +187,16 @@ body.dark #themeToggle {
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
 }
 
-
+.btn-liveclock{
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 16px;
+  background-color: lightblue;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  font-size: 14px;
+  text-decoration: none;
+}
